--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 html {
 	background-color: rgba(0, 53, 146, 0.9);
 	background-image: url(../images/dark-denim-3.png);
+	font-family: 'Raleway', sans-serif;
 }
 
 .container {
