--- a/css/styles.css
+++ b/css/styles.css
@@ -12,8 +12,8 @@ html {
 }
 
 #top-head {
-	padding-top: 2%;
-	padding-left: 10px;
+	padding-top: 0;
+	padding-left: 0;
 	padding-right: 10px;
 }
 
@@ -100,6 +100,10 @@ html {
 @media (min-width: 550px) {
 	.aat-bannerr {
 		display: initial;
+	}
+	#top-head {
+		padding-top: 2%;
+		padding-left: 10px;
 	}
 }
 
