--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ html {
 	font-size: 3.5rem;
 	color: #ccdeff;
 	font-weight: bold;
+	padding-top: 10px;
 }
 
 #main-title a {
@@ -69,6 +70,11 @@ html {
 	padding-left: 10px;
 }
 
+hr {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+}
+
 #area {
 	color: white;
 	padding: 0 20px;
@@ -85,10 +91,16 @@ html {
 	position: absolute;
 	padding: 20px 0 10px 0;
 	margin: 0 auto;
-	max-height: 270px;
+	max-height: 278px;
 	box-shadow: 0px 0px 3px 2px #00031d;
 	-moz-box-shadow: 0px 0px 3px 2px #00031d;
 	-webkit-box-shadow: 0px 0px 3px 2px #00031d;
+}
+
+@media (min-width: 333px) {
+	#foot {
+		max-height: 270px;
+	}
 }
 
 @media (min-width: 587px) {
@@ -97,12 +109,18 @@ html {
 	}
 }
 
+@media (min-width: 900px) {
+	#foot {
+		max-height: 240px;
+	}
+}
+
 @media (min-width: 550px) {
 	.aat-bannerr {
 		display: initial;
 	}
 	#top-head {
-		padding-top: 2%;
+		padding-top: 0;
 		padding-left: 10px;
 	}
 	#nav a {
