--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ html {
 
 .container {
 	background: #062641;
-	max-width: 1528px;
+	max-width: 1110px;
 	box-shadow: 0px 0px 5px 3px #00031d;
 	-webkit-box-shadow: 0px 0px 5px 3px #00031d;
 	-moz-box-shadow: 0px 0px 5px 3px #00031d;
@@ -144,6 +144,14 @@ hr {
 .linkList {
 	display: inline-block;
 	margin-right: 10px;
+}
+
+.linklist li a {
+	color: #00C2FF;
+}
+
+li {
+	color: white;
 }
 
 #links {
